--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.0",
     "recharts": "^2.7.2",
     "technicalindicators": "^3.1.0"
   },
